<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="favos">Your Favourites</string>
    <string name="start_sms">Hi Buddy! Thank you for downloading this app,
        Contrary to your expectations, this app is not about calorie counting or
        meals to eat to loose weight. We all know they don\'t work, in the long run. Instead 
        you will find practical advice on how to loose weight, and be healthy.
        I have garnered my wisdom gained from experience as well as some incredible women
        who simply got it figured out. Proceed to find out how you can loose weight 
        without effort, yes it is possible!
        </string>
	<string name="favourite">Add to favourites</string>
	<string name="sharethis">Share this article</string>
    <string name="arrow">Arrow</string>
    <string name="rateapp"> Rate this App</string>
     <string name="rateappno">Looks like you need to install the Google Play Store</string>
    <string name="app_name">Your Health Your Rules!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">SkrewSkinny</string>
    <string name="before"> I really want to loose weight</string>
    <string name="during">I\'m losing weight and it feels great! </string>
    <string name="after"> I have reached my target weight and I\'m not sure what to do next </string>
    <string name="winner"> I have kept my weight off for years now, I\'m awesome </string>
    <string name="Beautiful"><font size="24"><b> So, What\'s your story?</b></font></string>
    <string name="weight_lost">How much weight did you loose?</string>
    <string name="loose_time">How long did it take you to loose that much? </string>
    <string name="maintain_time">For how long have you maintained your current weight </string>
    <string name="method">Can you briefly describe, the methods you used to loose weight? Like your workout routine, the food groups you have been eating?</string>
    <string name="effects"> Do you experience the effects of weight loss  eg thinking of food all the time</string>
    <string name="recomend"> What recommendations do you have for someone wanting to loose weight or already in the journey?</string>
    <string name="shareDetails"> Yes, I allow you to use this information for analysis anonymously</string>
    <string name="feedbackbutton"> Send</string>
    <string name="kilos">Kgs</string>
    <string name="pounds">Pounds</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="weeks">Weeks</string>
    <string name="feedbackname"> Name</string>
    <string name="feedbackemail">Email Address</string>
    <string name="feedbackbody"> FeedBack Details</string>
    <string name="feedbacktype">Enter feedback type:</string>
    <string name="feedbacktitle"> This is my first real app :), I appreciate your feedback.</string>
    <string name="bugtype"> Bug</string>
    <string name="praisetype">Praise</string>
    <string name="suggtype">Suggestion</string>
    <string name="combtype">A combination </string>
    <string name="aboutme">About Me</string>
    <string name="share_this">Share_App</string>
    <string name="feedback_text">Send Feedback</string>

</resources>