<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.skrewskinny.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
     <item
        android:id="@+id/favs"
       
        android:orderInCategory="100"
        android:title="@string/favos"
        android:icon="@android:drawable/btn_star_big_on"
       
        
        
        
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/AboutMe"
        android:orderInCategory="100"
        android:title="@string/aboutme"
        app:showAsAction="never"/>
    <item
        android:id="@+id/shareApp"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="100"
        android:title="@string/share_this"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/rateApp"
       
        android:orderInCategory="100"
        android:title="@string/rateapp"
        
        
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/sendfeedback"
        android:orderInCategory="100"
        android:title="@string/feedback_text"
        app:showAsAction="never"/>

</menu>