<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yourhealthyourrules.MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Beautiful" />

    <Button
        android:id="@+id/beforeid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/before" />

    <Button
        android:id="@+id/duringid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/during" />

    <Button
        android:id="@+id/afterid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/after" />

    <Button
        android:id="@+id/winnerid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/winner" />

</LinearLayout>