<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:textSize="8pt" >
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress" >
        </EditText>

        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/feedbacktypelist"
            android:prompt="@string/feedbacktype" 
            android:spinnerMode="dropdown">
        </Spinner>

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="10" >
        </EditText>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton" >
        </Button>
    </LinearLayout>

</ScrollView>